# multi-lidar-driver

./: CMakeLists.txt  README.md  main.cpp
Livox-SDK/: build_dependecies.sh
include/: common.h  lds_lidar.h  shared_mem.h
src/: lds_lidar.cpp  lds_lidar_bp.cpp  shared_mem.cpp
